@startuml
title Database Classes

package Zend\Db\TableGateway {
	class TableGateway
}

package SAccounts\Storage {
    package Account {

        class ZendDbAccount

        package ZendDBAccount {

            enum RecordStatus {
                ACTIVE
                SUSPENDED
                DEFUNCT
            }

            interface RecordStatusRecordable {
                getStatus(array $key)
                setStatus(RecordStatus $status, array $key)
            }
            class RecordStatusRecording << (T, olive)>>
            class OrgTableGateway<sa_org> {
                has(IntType $id):bool
                create(StringType $name, Currency $crcy, IntType $id = null):int
            }
            class ChartTableGateway<sa_coa> {
                has(StringType $coaName, IntType $orgId):bool
                create(StringType $coaName, IntType $orgId, Currency $currency):int
            }
            class ChartLedgerTableGateway<sa_coa_ledger> {
                has(IntType $chartId, Nominal $nominal):bool
                create(IntType $chartId,Nominal $nominal,AccountType $type,StringType $name, IntType $prntId = null):int
            }
            class ChartLedgerLinkTableGateway<sa_coa_link> {
                create(IntType $prnt,IntType $child):bool
            }
        }


    }

    package Journal {
        class ZendDbJournal

        package ZendDBJournal {
            class JournalTableGateway<sa_journal> {
                has(IntType $id):bool
                create(IntType $chartId, StringType $note, \DateTime $date = null):int
            }
            class JournalEntryTableGateway<sa_journal_entry> {
                has(IntType $id):bool
                create(IntType $jrnId, Nominal $nominal, Currency $acDr, Currency $acCr):int
            }
        }
    }
}

TableGateway <|-- OrgTableGateway
TableGateway <|-- ChartTableGateway
TableGateway <|-- ChartLedgerTableGateway
TableGateway <|-- ChartLedgerLinkTableGateway
TableGateway <|-- JournalTableGateway
TableGateway <|-- JournalEntryTableGateway
ChartLedgerLinkTableGateway *-- ChartLedgerTableGateway
RecordStatus <.. RecordStatusRecording
RecordStatusRecordable <|-- RecordStatusRecording
RecordStatusRecording *-- OrgTableGateway
RecordStatusRecording *-- ChartTableGateway
RecordStatusRecording *-- ChartLedgerTableGateway
RecordStatusRecording *-- ChartLedgerLinkTableGateway

@enduml